first attempt to complete hometask 3

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,16 @@
         tools:context=".MainActivity">
 
     <TextView
+            android:id="@+id/tv_text"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:text="Hello World!"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="@dimen/font_large_24"
+            android:gravity="center"/>
 
     <ImageView
             android:id="@+id/iv_bender"
@@ -31,22 +34,26 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_normal_16">
         <EditText
+                android:id="@+id/et_message"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:lines="1"
                 android:textColor="@color/color_gray_light"
                 android:textColorHint="@color/color_gray_light"
-                android:hint="Ввелите текст"
+                android:imeOptions="actionDone"
+                android:hint="@string/enter_text"
                 android:paddingTop="@dimen/spacing_normal_16"
                 android:paddingBottom="@dimen/spacing_normal_16"
                 android:layout_marginLeft="@dimen/spacing_normal_16"
                 android:layout_marginRight="@dimen/spacing_normal_16"
-        />
-        <ImageButton
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/ic_send_black_24dp"/>
+                android:singleLine="true"/>
+        <ImageView
+                android:id="@+id/iv_send"
+                android:layout_width="@dimen/small_button_size"
+                android:layout_height="@dimen/small_button_size"
+                android:src="@drawable/ic_send_black_24dp"
+        android:layout_gravity="center"/>
     </LinearLayout>
 
 </LinearLayout>
