--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="btn_round_size_40">40dp</dimen>
     <dimen name="avatar_round_size">112dp</dimen>
     <dimen name="space_maximum_72">72dp</dimen>
+    <dimen name="btn_round_size40">40dp</dimen>
+    <dimen name="avatar_round_size">112dp</dimen>
 </resources>
