--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -64,5 +64,87 @@
                         />
                 </RelativeLayout>
         </FrameLayout>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@color/color_primary_light">
+                <LinearLayout android:layout_width="0dp"
+                              android:layout_height="wrap_content"
+                              android:layout_weight="1"
+                              android:orientation="vertical"
+                              android:gravity="center"
+                              android:paddingTop="@dimen/spacing_normal_16"
+                              android:paddingBottom="@dimen/spacing_normal_16">
+                        <TextView android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:textColor="@android:color/white"
+                                  android:textSize="@dimen/font_large_20"
+                                  android:text="0"
+                                  android:fontFamily="sans-serif-medium"
+                                  android:drawableLeft="@drawable/ic_sp_24"
+                                  android:drawablePadding="@dimen/spacing_tiny_4"/>
+                        <TextView android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:textColor="@android:color/white"
+                                  android:textSize="@dimen/font_normal_16"
+                                  android:text="@string/profile_label_rating"
+                        />
 
+                </LinearLayout>
+
+                <View android:layout_width="1dp"
+                      android:layout_height="match_parent"
+                      android:layout_marginTop="@dimen/spacing_tiny_4"
+                      android:layout_marginBottom="@dimen/spacing_tiny_4"
+                      android:background="@color/color_divider_light"/>
+
+                <LinearLayout android:layout_width="0dp"
+                              android:layout_height="wrap_content"
+                              android:layout_weight="1"
+                              android:orientation="vertical"
+                              android:gravity="center"
+                              android:paddingTop="@dimen/spacing_normal_16"
+                              android:paddingBottom="@dimen/spacing_normal_16">
+                        <TextView android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:textColor="@android:color/white"
+                                  android:textSize="@dimen/font_large_20"
+                                  android:text="0"
+                                  android:fontFamily="sans-serif-medium"
+                                  android:drawableLeft="@drawable/ic_respect_24"
+                                  android:drawablePadding="@dimen/spacing_tiny_4"/>
+                        <TextView android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:textColor="@android:color/white"
+                                  android:textSize="@dimen/font_normal_16"
+                                  android:text="@string/profile_label_respect"
+                        />
+
+                </LinearLayout>
+        </LinearLayout>
+        
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/spacing_normal_16">
+                
+                <ImageView android:id="@id/iv_avatar"
+                           android:layout_width="@dimen/btn_round_size_40"
+                           android:layout_height="@dimen/btn_round_size_40"
+                           android:src="@drawable/ic_avatar"/>
+                
+                <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/wr_first_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toEndOf="@id/iv_avatar"
+                        android:layout_marginStart="@dimen/spacing_normal_16">
+                        <EditText
+                                android:id="@+id/et_first_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="@string/profile_hint_first_name"/>
+                </com.google.android.material.textfield.TextInputLayout>
+        </RelativeLayout>
 </LinearLayout>
