--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,143 +8,231 @@
         android:orientation="vertical"
         tools:context=".ui.profile.ProfileActivity">
 
-        <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <ru.skillbranch.devintensive.ui.custom.AspectRatioImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/profile_bg"
-                        android:scaleType="centerCrop"
-                        app:aspectRatio="1.78"/>
-                <RelativeLayout android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
-                        <ImageButton
-                                android:layout_width="@dimen/btn_round_size40"
-                                android:layout_height="@dimen/btn_round_size40"
-                                android:background="@drawable/btn_round_bg"
-                                android:src="@drawable/ic_switch_day_night"
-                                android:layout_toStartOf="@id/iv_avatar"
-                                android:layout_marginEnd="@dimen/spacing_huge_32"
-                                android:layout_marginTop="36dp"
-                        />
-                        <ImageView
-                                android:id="@+id/iv_avatar"
-                                android:layout_width="@dimen/avatar_round_size"
-                                android:layout_height="@dimen/avatar_round_size"
-                                android:src="@drawable/avatar_default"
-                                android:layout_centerHorizontal="true"/>
-                        <ImageButton
-                                android:layout_width="@dimen/btn_round_size40"
-                                android:layout_height="@dimen/btn_round_size40"
-                                android:background="@drawable/btn_round_bg"
-                                android:src="@drawable/ic_edit_black_24dp"
-                                android:layout_toEndOf="@id/iv_avatar"
-                                android:layout_marginStart="@dimen/spacing_huge_32"
-                                android:layout_marginTop="36dp"
-
-                        />
-                        <TextView
-                                android:id="@+id/tv_name"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@id/iv_avatar"
-                                android:layout_centerHorizontal="true"
-                                tools:text="John Doe"
-                                android:textColor="@android:color/white"
-                        />
-                        <TextView
-                                android:id="@+id/tv_rank"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@id/tv_name"
-                                android:layout_centerHorizontal="true"
-                                tools:text="Junior Android Developer"
-                                android:textColor="@android:color/white"
-                        />
-                </RelativeLayout>
-        </FrameLayout>
-        <LinearLayout
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <ru.skillbranch.devintensive.ui.custom.AspectRatioImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="@color/color_primary_light">
-                <LinearLayout android:layout_width="0dp"
-                              android:layout_height="wrap_content"
-                              android:layout_weight="1"
-                              android:orientation="vertical"
-                              android:gravity="center"
-                              android:paddingTop="@dimen/spacing_normal_16"
-                              android:paddingBottom="@dimen/spacing_normal_16">
-                        <TextView android:layout_width="wrap_content"
-                                  android:layout_height="wrap_content"
-                                  android:textColor="@android:color/white"
-                                  android:textSize="@dimen/font_large_20"
-                                  android:text="0"
-                                  android:fontFamily="sans-serif-medium"
-                                  android:drawableLeft="@drawable/ic_sp_24"
-                                  android:drawablePadding="@dimen/spacing_tiny_4"/>
-                        <TextView android:layout_width="wrap_content"
-                                  android:layout_height="wrap_content"
-                                  android:textColor="@android:color/white"
-                                  android:textSize="@dimen/font_normal_16"
-                                  android:text="@string/profile_label_rating"
-                        />
+                android:src="@drawable/profile_bg"
+                android:scaleType="centerCrop"
+                app:aspectRatio="1.78"/>
+        <RelativeLayout android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+            <ImageButton
+                    android:id="@+id/btn_switch_theme"
+                    android:layout_width="@dimen/btn_round_size40"
+                    android:layout_height="@dimen/btn_round_size40"
+                    android:background="@drawable/btn_round_bg"
+                    android:src="@drawable/ic_switch_day_night"
+                    android:layout_toStartOf="@id/iv_avatar"
+                    android:layout_marginEnd="@dimen/spacing_huge_32"
+                    android:layout_marginTop="36dp"
+            />
+            <ImageView
+                    android:id="@+id/iv_avatar"
+                    android:layout_width="@dimen/avatar_round_size"
+                    android:layout_height="@dimen/avatar_round_size"
+                    android:src="@drawable/avatar_default"
+                    android:layout_centerHorizontal="true"/>
+            <ImageButton
+                    android:id="@+id/btn_edit"
+                    android:layout_width="@dimen/btn_round_size40"
+                    android:layout_height="@dimen/btn_round_size40"
+                    android:background="@drawable/btn_round_bg"
+                    android:src="@drawable/ic_edit_black_24dp"
+                    android:layout_toEndOf="@id/iv_avatar"
+                    android:layout_marginStart="@dimen/spacing_huge_32"
+                    android:layout_marginTop="36dp"
 
-                </LinearLayout>
-
-                <View android:layout_width="1dp"
-                      android:layout_height="match_parent"
-                      android:layout_marginTop="@dimen/spacing_tiny_4"
-                      android:layout_marginBottom="@dimen/spacing_tiny_4"
-                      android:background="@color/color_divider_light"/>
-
-                <LinearLayout android:layout_width="0dp"
-                              android:layout_height="wrap_content"
-                              android:layout_weight="1"
-                              android:orientation="vertical"
-                              android:gravity="center"
-                              android:paddingTop="@dimen/spacing_normal_16"
-                              android:paddingBottom="@dimen/spacing_normal_16">
-                        <TextView android:layout_width="wrap_content"
-                                  android:layout_height="wrap_content"
-                                  android:textColor="@android:color/white"
-                                  android:textSize="@dimen/font_large_20"
-                                  android:text="0"
-                                  android:fontFamily="sans-serif-medium"
-                                  android:drawableLeft="@drawable/ic_respect_24"
-                                  android:drawablePadding="@dimen/spacing_tiny_4"/>
-                        <TextView android:layout_width="wrap_content"
-                                  android:layout_height="wrap_content"
-                                  android:textColor="@android:color/white"
-                                  android:textSize="@dimen/font_normal_16"
-                                  android:text="@string/profile_label_respect"
-                        />
-
-                </LinearLayout>
-        </LinearLayout>
-        
-        <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/spacing_normal_16">
-                
-                <ImageView android:id="@id/iv_avatar"
-                           android:layout_width="@dimen/btn_round_size_40"
-                           android:layout_height="@dimen/btn_round_size_40"
-                           android:src="@drawable/ic_avatar"/>
-                
-                <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/wr_first_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/iv_avatar"
-                        android:layout_marginStart="@dimen/spacing_normal_16">
-                        <EditText
-                                android:id="@+id/et_first_name"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/profile_hint_first_name"/>
-                </com.google.android.material.textfield.TextInputLayout>
+            />
+            <TextView
+                    style="@style/Profile.Header.Nickname"
+                    android:id="@+id/tv_nick_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/iv_avatar"
+                    tools:text="John Doe"
+                    android:layout_marginEnd="18dp" android:layout_alignEnd="@+id/iv_avatar"
+                    android:layout_marginStart="18dp" android:layout_alignStart="@+id/iv_avatar"/>
+            <TextView
+                    style="@style/Profile.Header.Rank"
+                    android:id="@+id/tv_rank"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_nick_name"
+                    tools:text="Junior Android Developer"
+                    android:layout_marginEnd="-51dp" android:layout_alignEnd="@+id/tv_nick_name"
+                    android:layout_marginStart="-54dp" android:layout_alignStart="@+id/tv_nick_name"/>
         </RelativeLayout>
+    </FrameLayout>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/color_primary_light">
+        <LinearLayout android:layout_width="0dp"
+                      android:layout_height="wrap_content"
+                      android:layout_weight="1"
+                      android:orientation="vertical"
+                      android:gravity="center"
+                      android:paddingTop="@dimen/spacing_normal_16"
+                      android:paddingBottom="@dimen/spacing_normal_16">
+            <TextView
+                    style="@style/Profile.Metrics.Value"
+                    android:id="@+id/tv_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="0"
+                    android:drawableStart="@drawable/ic_sp_24"/>
+            <TextView
+                    style="@style/Profile.Metrics.Label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/profile_label_rating"
+            />
+
+        </LinearLayout>
+
+        <View android:layout_width="1dp"
+              android:layout_height="match_parent"
+              android:layout_marginTop="@dimen/spacing_tiny_4"
+              android:layout_marginBottom="@dimen/spacing_tiny_4"
+              android:background="@color/color_divider_light"/>
+
+        <LinearLayout android:layout_width="0dp"
+                      android:layout_height="wrap_content"
+                      android:layout_weight="1"
+                      android:orientation="vertical"
+                      android:gravity="center"
+                      android:paddingTop="@dimen/spacing_normal_16"
+                      android:paddingBottom="@dimen/spacing_normal_16">
+            <TextView
+                    style="@style/Profile.Metrics.Value"
+                    android:id="@+id/tv_respect"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="0"
+                    android:drawableStart="@drawable/ic_respect_24"/>
+            <TextView
+                    style="@style/Profile.Metrics.Label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/profile_label_respect"
+            />
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <RelativeLayout
+            style="@style/Profile.InfoItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <ImageView android:id="@id/iv_avatar"
+                   android:layout_width="@dimen/btn_round_size_40"
+                   android:layout_height="@dimen/btn_round_size_40"
+                   android:src="@drawable/ic_avatar"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/wr_first_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/iv_avatar"
+                android:layout_marginStart="@dimen/spacing_normal_16">
+            <EditText
+                    style="@style/Profile.EditText.Single"
+                    android:id="@+id/et_first_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/profile_hint_first_name"
+                    tools:text="John"
+                    android:inputType="textPersonName"
+                    android:imeOptions="actionNext"/>
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/wr_last_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/wr_first_name"
+                android:layout_toEndOf="@id/iv_avatar"
+                android:layout_marginStart="@dimen/spacing_normal_16">
+            <EditText
+                    style="@style/Profile.EditText.Single"
+                    android:id="@+id/et_last_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/profile_hint_last_name"
+                    android:inputType="textPersonName"
+                    android:imeOptions="actionNext"/>
+        </com.google.android.material.textfield.TextInputLayout>
+    </RelativeLayout>
+
+    <View android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:layout_marginTop="@dimen/spacing_tiny_4"
+          android:layout_marginBottom="@dimen/spacing_tiny_4"
+          android:background="@color/color_divider_dark"
+          android:layout_marginStart="@dimen/space_maximum_72"/>
+
+    <LinearLayout
+            style="@style/Profile.InfoItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        <ImageView android:layout_width="@dimen/btn_round_size_40"
+                   android:layout_height="@dimen/btn_round_size_40"
+                   android:src="@drawable/ic_about"/>
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/wr_about"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/spacing_normal_16">
+            <EditText
+                    style="@style/Profile.EditText.MultiLine"
+                    android:id="@+id/et_about"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/profile_hint_about"
+                    android:inputType="textMultiLine"/>
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+
+    <View android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:layout_marginTop="@dimen/spacing_tiny_4"
+          android:layout_marginBottom="@dimen/spacing_tiny_4"
+          android:background="@color/color_divider_dark"
+          android:layout_marginStart="@dimen/space_maximum_72"/>
+
+    <LinearLayout
+            style="@style/Profile.InfoItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        <ImageView android:layout_width="@dimen/btn_round_size_40"
+                   android:layout_height="@dimen/btn_round_size_40"
+                   android:src="@drawable/ic_repo"/>
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/wr_repository"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/spacing_normal_16"
+                android:layout_marginEnd="@dimen/spacing_normal_16"
+                android:layout_weight="1">
+            <EditText
+                    style="@style/Profile.EditText.Single"
+                    android:id="@+id/et_repository"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/profile_hint_repository"
+                    android:inputType="textUri"
+                    android:imeOptions="actionDone"/>
+        </com.google.android.material.textfield.TextInputLayout>
+        <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_eye_24dp"/>
+    </LinearLayout>
 </LinearLayout>
