--- a/app/src/main/res/layout/activity_profile_constraint.xml
+++ b/app/src/main/res/layout/activity_profile_constraint.xml
@@ -74,14 +74,14 @@
     <View android:id="@+id/rank_background"
           android:layout_width="0dp"
           android:layout_height="@dimen/space_maximum_72"
-          android:background="@color/color_primary"
+          android:background="?attr/colorAccentedSurface"
           app:layout_constraintTop_toBottomOf="@id/iv_header_background"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"/>
     <View android:id="@+id/vertical_divider"
           android:layout_width="1dp"
           android:layout_height="0dp"
-          android:background="@color/color_divider_light"
+          android:background="?attr/colorDivider"
           app:layout_constraintStart_toStartOf="@id/rank_background"
           app:layout_constraintTop_toTopOf="@id/rank_background"
           app:layout_constraintEnd_toEndOf="@id/rank_background"
@@ -185,7 +185,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="@dimen/spacing_tiny_4"
             android:layout_marginBottom="@dimen/spacing_tiny_4"
-            android:background="@color/color_divider_dark"
+            android:background="?attr/colorDivider"
             android:layout_marginStart="@dimen/space_maximum_72"/>
 
     <ImageView android:id="@+id/iv_about"
@@ -228,7 +228,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="@dimen/spacing_tiny_4"
             android:layout_marginBottom="@dimen/spacing_tiny_4"
-            android:background="@color/color_divider_dark"
+            android:background="?attr/colorDivider"
             android:layout_marginStart="@dimen/space_maximum_72"/>
     <ImageView android:id="@+id/iv_repo"
                android:layout_width="@dimen/btn_round_size_40"
