--- a/app/src/main/res/layout/activity_profile_constraint.xml
+++ b/app/src/main/res/layout/activity_profile_constraint.xml
@@ -19,11 +19,13 @@
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintDimensionRatio="16:9"/>
 
-    <ImageView
+    <ru.skillbranch.devintensive.ui.custom.CircleImageView
             android:id="@+id/iv_avatar"
             android:layout_width="@dimen/avatar_round_size"
             android:layout_height="@dimen/avatar_round_size"
-            app:srcCompat="@drawable/avatar_default"
+            app:cv_borderWidth="2dp"
+            app:srcCompat="?attr/colorAccent"
+            app:cv_text = "TV"
             app:layout_constraintTop_toTopOf="@+id/iv_header_background"
             app:layout_constraintEnd_toEndOf="@+id/iv_header_background"
             app:layout_constraintStart_toStartOf="@+id/iv_header_background"/>
