--- a/app/src/main/res/layout/activity_profile_constraint.xml
+++ b/app/src/main/res/layout/activity_profile_constraint.xml
@@ -27,7 +27,8 @@
             app:cv_borderWidth="2dp"
             app:layout_constraintTop_toTopOf="@+id/iv_header_background"
             app:layout_constraintEnd_toEndOf="@+id/iv_header_background"
-            app:layout_constraintStart_toStartOf="@+id/iv_header_background"/>
+            app:layout_constraintStart_toStartOf="@+id/iv_header_background"
+            app:layout_constraintHorizontal_bias="0.498"/>
     <ImageButton
             android:id="@+id/btn_switch_theme"
             android:layout_width="@dimen/btn_round_size_40"
