--- a/app/src/main/res/layout/activity_profile_constraint.xml
+++ b/app/src/main/res/layout/activity_profile_constraint.xml
@@ -23,7 +23,7 @@
             android:id="@+id/iv_avatar"
             android:layout_width="@dimen/avatar_round_size"
             android:layout_height="@dimen/avatar_round_size"
-            app:srcCompat="@color/color_accent"
+            app:srcCompat="@drawable/ic_avatar"
             app:cv_borderWidth="2dp"
             app:layout_constraintTop_toTopOf="@+id/iv_header_background"
             app:layout_constraintEnd_toEndOf="@+id/iv_header_background"
