--- a/app/src/main/res/layout/activity_profile_constraint.xml
+++ b/app/src/main/res/layout/activity_profile_constraint.xml
@@ -23,12 +23,15 @@
             android:id="@+id/iv_avatar"
             android:layout_width="@dimen/avatar_round_size"
             android:layout_height="@dimen/avatar_round_size"
-            app:srcCompat="@drawable/ic_avatar"
+            app:srcCompat="?attr/colorAccent"
             app:cv_borderWidth="2dp"
             app:layout_constraintTop_toTopOf="@+id/iv_header_background"
             app:layout_constraintEnd_toEndOf="@+id/iv_header_background"
             app:layout_constraintStart_toStartOf="@+id/iv_header_background"
-            app:layout_constraintHorizontal_bias="0.498"/>
+            app:layout_constraintHorizontal_bias="0.498"
+            app:cv_text="VASYA"
+            app:cv_textSize="@dimen/font_small_12"
+            />
     <ImageButton
             android:id="@+id/btn_switch_theme"
             android:layout_width="@dimen/btn_round_size_40"
