--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -25,14 +25,32 @@
         <com.google.android.material.chip.ChipGroup
                 android:id="@+id/chip_group"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/spacing_normal_16"
+                android:paddingRight="@dimen/spacing_normal_16"
+                android:layout_marginTop="@dimen/spacing_small_8"
+                android:layout_marginBottom="@dimen/spacing_small_8"
+                android:visibility="gone">
 
         </com.google.android.material.chip.ChipGroup>
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_user_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
+                android:layout_height="match_parent"
+                tools:listitem="@layout/item_user_list">
         </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="@dimen/spacing_normal_16"
+            app:srcCompat = "@drawable/ic_arrow_forward_white"
+            android:visibility="invisible"
+            android:scaleX="0"
+            android:scaleY="0"
+            tools:visibility="visible"
+            tools:scaleX="1"
+            tools:scaleY="1"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
